--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,41 @@
-name: Deploy to Cloudflare Pages
+# GitHub Actions deployment disabled - using Cloudflare Pages direct integration
+# Cloudflare Pages automatically deploys from GitHub repository
+# No additional CI/CD needed
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    name: Deploy to Cloudflare Pages
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Build application
-        run: npm run build
-      
-      - name: Deploy to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: avanta-finance
-          directory: dist
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+# name: Deploy to Cloudflare Pages
+# 
+# on:
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:
+# 
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     name: Deploy to Cloudflare Pages
+#     
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#       
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '18'
+#           cache: 'npm'
+#       
+#       - name: Install dependencies
+#         run: npm ci
+#       
+#       - name: Build application
+#         run: npm run build
+#       
+#       - name: Deploy to Cloudflare Pages
+#         uses: cloudflare/pages-action@v1
+#         with:
+#           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+#           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+#           projectName: avanta-finance
+#           directory: dist
+#           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
