--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "avanta-finance",
+  "name": "avanta-coinmaster",
   "version": "1.0.0",
   "description": "Sistema de contabilidad personal y empresarial para persona física con actividad empresarial en México",
   "type": "module",
