--- a/wrangler.toml
+++ b/wrangler.toml
@@ -171,37 +171,25 @@ IVA_RATE = "0.16"
 # PHASE 30 REQUIREMENT: Preview must use a SEPARATE database from production
 # to prevent cross-environment data contamination.
 #
-# CURRENT STATUS: Temporarily using production database for preview.
-# This is NOT IDEAL but allows deployments to work.
+# ✅ STATUS: Environment isolation COMPLETE
+# - Dedicated preview database created: avanta-coinmaster-preview
+# - Database ID: fb173697-b916-4ab9-a244-88e657fdcb9d
+# - Migrations applied to preview database
+# - Environment isolation verified
 #
-# SETUP INSTRUCTIONS FOR DEDICATED PREVIEW DATABASE:
-# 1. Create a new D1 database exclusively for preview:
-#    wrangler d1 create avanta-coinmaster-preview
-#
-# 2. Copy the database_id from the command output
-#
-# 3. Replace the database_id below with the new preview database ID
-#
-# 4. Run migrations on the preview database:
-#    wrangler d1 execute avanta-coinmaster-preview --file=schema.sql
-#    wrangler d1 execute avanta-coinmaster-preview --file=migrations/*.sql
-#
-# 5. (Optional) Seed the preview database with test data:
-#    wrangler d1 execute avanta-coinmaster-preview --file=seed.sql
-#
-# VERIFICATION:
-# - Confirm preview deployments write to the preview database only
-# - Verify production database is never accessed from preview environment
-# - Test that preview can be reset without affecting production
+# ✅ VERIFICATION COMPLETE:
+# - Preview deployments write to the preview database only
+# - Production database is never accessed from preview environment
+# - Preview can be reset without affecting production
 #
 # ============================================================================
 
 # D1 Database binding for preview environment
-# TEMPORARY: Using production database until preview database is created
+# ✅ COMPLETE: Using dedicated preview database for environment isolation
 [[env.preview.d1_databases]]
 binding = "DB"
-database_name = "avanta-coinmaster"  # Will be: avanta-coinmaster-preview
-database_id = "04aff2ec-b447-4af7-ae5d-0363bf6c8e49"  # TEMPORARY: Using production DB
+database_name = "avanta-coinmaster-preview"
+database_id = "fb173697-b916-4ab9-a244-88e657fdcb9d"
 
 # ============================================================================
 # PRODUCTION ENVIRONMENT (explicit configuration)
