feat: Optimize wrangler and deployment files for Implementation Plan V9
- Update wrangler.toml with V9 Phase 46 context and database health monitoring
- Add comprehensive database documentation (43 tables + 7 views + 46 migrations)
- Enhance package.json with database health checks and testing scripts
- Optimize vite.config.js with bundle splitting and performance improvements
- Update deployment guide with current project state and verification steps
- Add Implementation Plan V9 status tracking and environment variables
- Include comprehensive API endpoint documentation (78+ endpoints)
- Add database health monitoring and schema validation commands
- Optimize build process with manual chunking and terser minification
- Enhance development experience with full-stack testing scripts

--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
   "scripts": {
     "dev": "vite",
     "dev:frontend": "vite",
+    "dev:full": "npm run build && wrangler pages dev dist --d1 DB=avanta-coinmaster --r2 RECEIPTS=avanta-receipts --port 8788",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && wrangler pages deploy dist"
+    "deploy": "npm run build && wrangler pages deploy dist",
+    "deploy:preview": "npm run build && wrangler pages deploy dist --env preview",
+    "db:health": "curl http://127.0.0.1:8788/api/health",
+    "db:check": "wrangler d1 execute avanta-coinmaster --command=\"SELECT COUNT(*) as table_count FROM sqlite_master WHERE type='table'\"",
+    "db:list": "wrangler d1 execute avanta-coinmaster --command=\"SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\"",
+    "db:views": "wrangler d1 execute avanta-coinmaster --command=\"SELECT name FROM sqlite_master WHERE type='view' ORDER BY name\"",
+    "test:api": "curl https://avanta-coinmaster.pages.dev/api/health",
+    "test:local": "npm run dev:full & sleep 5 && npm run db:health"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
