--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,6 +7,9 @@
 #
 # Documentation: https://developers.cloudflare.com/workers/wrangler/configuration/
 #
+# Implementation Plan V9: Phase 46 - Integration Testing & Quality Assurance
+# Database: 43 tables + 7 views | API Endpoints: 78+ | Components: 114+
+#
 # ============================================================================
 
 # Application name (must be unique across Cloudflare)
@@ -32,6 +35,12 @@ pages_build_output_dir = "dist"
 # D1 is Cloudflare's distributed SQLite database running at the edge.
 # It provides low-latency SQL database access from Workers.
 #
+# Current Database State (Implementation Plan V9):
+# - 43 Tables: users, transactions, accounts, categories, invoices, etc.
+# - 7 Views: Optimized views for reporting and analytics
+# - 46 Migration Files: Complete database evolution history
+# - Health Monitoring: Comprehensive database health checks
+#
 # Setup Instructions:
 # 1. Create the database:
 #    wrangler d1 create avanta-coinmaster
@@ -40,6 +49,8 @@ pages_build_output_dir = "dist"
 #
 # 3. Run migrations to create tables:
 #    wrangler d1 execute avanta-coinmaster --file=schema.sql
+#    wrangler d1 execute avanta-coinmaster --file=migrations/001_initial_schema.sql
+#    # ... apply all 46 migrations in order
 #
 # 4. (Optional) Load seed data:
 #    wrangler d1 execute avanta-coinmaster --file=seed.sql
@@ -51,6 +62,7 @@ pages_build_output_dir = "dist"
 #   List databases:     wrangler d1 list
 #   Query database:     wrangler d1 execute avanta-coinmaster --command="SELECT * FROM transactions LIMIT 5"
 #   Backup database:    wrangler d1 export avanta-coinmaster --output=backup.sql
+#   Health check:       curl http://127.0.0.1:8788/api/health
 #
 # Free Tier Limits:
 #   - Storage: 5 GB
@@ -111,6 +123,16 @@ ENVIRONMENT = "production"
 
 # Application version (update with each deployment)
 APP_VERSION = "1.0.0"
+
+# Implementation Plan V9 Status
+IMPLEMENTATION_PLAN = "V9"
+CURRENT_PHASE = "46"
+PHASE_NAME = "Integration Testing & Quality Assurance"
+
+# Database Health Monitoring
+DB_HEALTH_MONITORING = "true"
+DB_SCHEMA_VALIDATION = "true"
+DB_MIGRATION_TRACKING = "true"
 
 # API Configuration
 API_TIMEOUT_MS = "30000"
@@ -273,7 +295,7 @@ bucket_name = "avanta-receipts"
 # Configuration for Cloudflare Pages Functions (Workers)
 # Functions are automatically deployed from the /functions directory
 #
-# Routes:
+# Current API Endpoints (78+ total):
 #   /api/dashboard        - GET: Financial dashboard summary
 #   /api/transactions     - GET, POST: List/Create transactions
 #   /api/transactions/:id - GET, PUT, DELETE: Single transaction operations
@@ -282,6 +304,18 @@ bucket_name = "avanta-receipts"
 #   /api/fiscal           - GET: Tax calculations (ISR, IVA)
 #   /api/invoices         - GET, POST: CFDI invoice management
 #   /api/upload           - POST: File upload to R2
+#   /api/health           - GET: Database health monitoring
+#   /api/monitoring/health - GET: Enhanced health checks
+#   /api/users            - GET, POST, PUT: User management
+#   /api/categories       - GET, POST, PUT, DELETE: Category management
+#   /api/budgets          - GET, POST, PUT, DELETE: Budget management
+#   /api/credits          - GET, POST, PUT, DELETE: Credit management
+#   /api/receipts         - GET, POST, PUT, DELETE: Receipt management
+#   /api/audit-log        - GET: Audit logging
+#   /api/help             - GET: Help system
+#   /api/tasks            - GET, POST, PUT, DELETE: Task management
+#   /api/demo             - GET, POST: Demo system
+#   ... and 60+ more endpoints
 #
 # ============================================================================
 
@@ -308,31 +342,38 @@ bucket_name = "avanta-receipts"
 # DEPLOYMENT INSTRUCTIONS
 # ============================================================================
 #
-# Local Development:
+# Implementation Plan V9 Deployment Instructions:
 #   1. Install dependencies:         npm install
 #   2. Build the application:        npm run build
 #   3. Start dev server:             npm run dev
-#   4. Preview with Workers:         npx wrangler pages dev dist
+#   4. Preview with Workers:         npx wrangler pages dev dist --d1 DB=avanta-coinmaster --r2 RECEIPTS=avanta-receipts
+#   5. Test database health:         curl http://127.0.0.1:8788/api/health
 #
 # Production Deployment:
 #   1. Login to Cloudflare:          wrangler login
-#   2. Create D1 database:           wrangler d1 create avanta-coinmaster
-#   3. Update database_id above with the output ID
-#   4. Run migrations:               wrangler d1 execute avanta-coinmaster --file=schema.sql
-#   5. Create R2 bucket:             wrangler r2 bucket create avanta-receipts
-#   6. Build application:            npm run build
+#   2. Verify D1 database:           wrangler d1 list
+#   3. Check database health:         wrangler d1 execute avanta-coinmaster --command="SELECT COUNT(*) FROM sqlite_master WHERE type='table'"
+#   4. Verify all 43 tables exist:   wrangler d1 execute avanta-coinmaster --command="SELECT name FROM sqlite_master WHERE type='table' ORDER BY name"
+#   5. Verify all 7 views exist:      wrangler d1 execute avanta-coinmaster --command="SELECT name FROM sqlite_master WHERE type='view' ORDER BY name"
+#   6. Build application:             npm run build
 #   7. Deploy to Pages:              wrangler pages deploy dist
-#   8. Configure bindings in Dashboard (if not auto-configured)
+#   8. Test health endpoint:          curl https://avanta-coinmaster.pages.dev/api/health
 #
 # Continuous Deployment:
-#   - Push to main branch triggers automatic deployment via GitHub Actions
-#   - See .github/workflows/deploy.yml for CI/CD configuration
+#   - Push to main branch triggers automatic deployment via Cloudflare Pages
+#   - Database health monitoring active
+#   - 78+ API endpoints automatically deployed
+#   - 114+ React components built and optimized
 #
 # Troubleshooting:
 #   - List databases:     wrangler d1 list
 #   - List buckets:       wrangler r2 bucket list
 #   - View logs:          wrangler pages deployment tail
-#   - Test query:         wrangler d1 execute avanta-coinmaster --command="SELECT COUNT(*) FROM transactions"
+#   - Test database:      wrangler d1 execute avanta-coinmaster --command="SELECT COUNT(*) FROM sqlite_master WHERE type='table'"
+#   - Health check:        curl https://avanta-coinmaster.pages.dev/api/health
+#   - Test API:            curl https://avanta-coinmaster.pages.dev/api/dashboard
+#   - Check migrations:    ls migrations/ | wc -l (should show 46)
+#   - Verify components:   npm run build (should build 114+ components)
 #
 # Documentation:
 #   - Wrangler:          https://developers.cloudflare.com/workers/wrangler/
